...
import com.android.gatherly.model.todoCategory.ToDoCategory
import com.android.gatherly.ui.theme.Typography

/** Test tags for CategoriesDropDown composable */
object CategoriesDropDownTestTags {

  const val CATEGORY_DROP_DOWN = "categoryDropDown"
  const val CATEGORY_NONE_ITEM = "categoryNoneItem"

  const val CATEGORY_EDIT_MODE_BUTTON = "categoryEditModeButton"
  const val CATEGORY_CREATE_A_NEW_BUTTON = "categoryCreateANewButton"

  /**
   * Returns a unique test tag for the button representing a given [ToDoCategory] item.
   *
   * @param categoryName The String of [ToDoCategory] item whose test tag will be generated.
   * @return A string uniquely identifying the ToDoCategory item in the UI.
...
    Icon(Icons.Filled.DeleteForever, contentDescription = "Delete category")
  }
}

object AlertDialogCreateTagTestTags {

  const val ALERT_CREATE_TAG = "alertDialogCreateNewTag"
  const val ALERT_CREATE_TAG_BUTTON = "buttonAlertDialogCreateNewTag"
  const val ALERT_CREATE_TAG_NAME_INPUT = "inputNameAlertDialogTag"

  const val ALERT_CREATE_TAG_COLOR_RANDOM = "randomColorButtonAlertDialogCreateNewTag"
}

/**
 * Alert dialog to create a new tag
 *
 * @param showCreateTagDialog MutableState<Boolean> to show or not the dialog
...
