...

private const val DELAY = 1000L

/** Contains test tags used for UI testing on the [AddTodoScreen]. */
object AddTodoScreenTestTags {
  /** Tag for the [ToDo] title input field. */
  const val INPUT_TODO_TITLE = "inputTodoTitle"

  /** Tag for the [ToDo] description input field. */
  const val INPUT_TODO_DESCRIPTION = "inputTodoDescription"

  /** Tag for the [ToDo] due date input field. */
  const val INPUT_TODO_DATE = "inputTodoDate"

  /** Tag for the [ToDo] due time input field. */
  const val INPUT_TODO_TIME = "inputTodoTime"

  /** Tag for the Save button that submits the [ToDo]. */
  const val TODO_SAVE = "todoSave"

  /** Tag for displaying error messages under text fields. */
  const val ERROR_MESSAGE = "errorMessage"

  /** Tag for the extra options button */
  const val MORE_OPTIONS = "moreOptions"
}

/**
 * Text field colors defined outside the composable scope to be shared between [AddTodoScreen] and
 * [EditTodoScreen]
 */
...
